# json_tester

./: CLAUDE.md  README.md  pyproject.toml
test/: test_jsons.py
tests/: conftest.py  data.py  data_generators.py  serdes.py  test_jsons.py
