[project]
name = "json-tester"
version = "0.1.0"
description = "Helps figure out which json library work for what datatypes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "orjson>=3.10.18",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "simplejson>=3.20.1",
    "ujson>=5.10.0",
]
