[project]
name = "json-tester"
version = "0.1.0"
description = "Helps figure out which json library work for what datatypes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "poethepoet>=0.30.0",
    "pandas>=2.2.3",
    "numpy>=2.2.6",
    "tabulate>=0.9.0",
    "pillow>=11.2.1",
    "h5py>=3.14.0",
    "astropy>=7.1.0",
    "xarray>=2025.4.0",
    "polars>=1.30.0",
    "dask>=2025.5.1",
]
[project.optional-dependencies]
msgspec = [ "msgspec>=0.19.0" ]
orjson = [ "orjson>=3.10.18" ]
simplejson = [ "simplejson>=3.20.1" ]
ujson = [ "ujson>=5.10.0" ]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
          "ANN", # no types
          "EM", # allow strings in raise(), despite python being ugly about it
          "TRY003", # allow long error messages inside raise()
          "D203", # No blank before class docstring (D211 = require blank line)
          "D212", # Commit message style docstring is D213, ignore D212
          "COM812", # manual says linter rule conflicts with formatter
          "ISC001", # manual says litner rule conflicts with formatter
          "RET504", # Allow else if unnecessary because more readable
          "RET505", # Allow else if unnecessary because more readable
          "RET506", # Allow else if unnecessary because more readable
          "RET507", # Allow else if unnecessary because more readable
          "RET508", # Allow else if unnecessary because more readable
          "RUF012", # We don't do typing, so no typing
          "SIM105", # Too opionated (try-except-pass)
          "PT003", # scope="function" implied but I like readability
          "G004", # I like fstrings in my log
          ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
              "D", # ignore docstring errors
              "S101", # allow assert
              "INP001", # no need for __init__ in test directories
            ]

[tool.pytest.ini_options]
log_cli = true


[tool.poe.tasks.test]
cmd = "pytest"
help = "Run."
